[package]
name = "bulk_price_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "bulk_price_api"
path = "src/lib.rs"

[[bin]]
name = "bulk_price_api"
path = "src/main.rs"

[dependencies]
actix-web = "4.3"
actix-web-actors = "4.2"
actix = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anchor-client = "0.29.0"
solana-sdk = "1.18"
solana-client = "1.18"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
log = "0.4"
env_logger = "0.10"
backoff = { version = "0.4", features = ["tokio"] }
anyhow = "1.0"
dotenv = "0.15.0"
dashmap = "5.4"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }

[[bench]]
name = "price_fetch_benchmark"
harness = false

# scripts
# cargo build
# cargo watch -x 'run'
# cargo run
# cargo run --release
# cargo bench